examples/test/testpolicy19924.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19924
  namespace: namespace499
spec:
  podSelector:
    matchLabels:
      key25: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value17
          key48: value6
      podSelector:
        matchLabels:
          key31: value40
          key0: value26
          key10: value37
